# upstageailab-nlp-summarization-nlp_5-song

./: .env.template  .gitignore  README.md  config.yaml  config_server_optimized.yaml  patch_auto_experiment.py  pyproject.toml  requirements.txt  rollback_extreme_optimization.sh  run_kobart_full_pipeline.sh  run_main_5_experiments.sh
analysis_results/: README.md
code/: README_SWEEP.md  __init__.py  auto_experiment_runner.py  baseline.ipynb  baseline.py  config.yaml  fix_trainer.py  parallel_sweep_runner.py  patch_auto_experiment_runner.py  patch_trainer.py  post_training_inference.py  run_inference.py  run_solar_ensemble.py  solar_api.ipynb  sweep_runner.py  test_data_loading.py  test_integration.py  test_pipeline.py  test_prediction_methods.py  test_simple.py  trainer.py
code/core/: __init__.py  inference.py
code/data_augmentation/: README_backtranslation.md  __init__.py  (+4 more)
config/: base_config.yaml
data/: topic_dict_cleaned.yaml
docs/: CLAUDE_FAILURE_REPORT_26HOURS.md  NLP경진대회_로드맵.html  README.md  auto1 branch 설정.md  documentation_guidelines.md  implementation_report.md  main_base_workflow.md  경진대회 로드맵 정리.md
final_submission/: run_final_inference.py
huggingface_app/: app.py  requirements_app.txt  solar_api.py  t.ipynb
notebooks/: test_device.ipynb  test_inference.ipynb  test_pathmanager.ipynb  test_rouge_multi.ipynb
scripts/: clear_python_cache.sh  multi_configs_exp.sh  rsync_logs_from_remote.sh  setup_aistages.sh
src/: [Dialogue Summarization] 베이스라인 코드 해설.ipynb  main_base.py  main_base_add_optuna.py  main_base_all.py  main_base_modified.py
(+292 files in other folders)
