[project]
name = "nlp-summarization"
version = "0.1.0"
description = "NLP 대화 요약 프로젝트"
authors = [{name = "Jayden", email = "jayden@example.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.1.4",
    "numpy>=1.23.5",
    "wandb>=0.16.1",
    "tqdm>=4.66.1",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "torchaudio>=2.6.0",
    "pytorch-lightning>=2.5.2",
    "transformers>=4.54.0",
    "rouge>=1.0.1",
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.9",
    "datasets>=2.14.0",
    "evaluate>=0.4.0",
    # "unsloth",  # Ubuntu에서 활성화 예정
    "black>=25.1.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.12.0",
    "flake8>=6.1.0",
    "isort>=5.13.2",
    "mypy>=1.7.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["code"]

[tool.black]
line-length = 120
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "transformers.*",
    "pytorch_lightning.*",
    "wandb.*",
    "rouge.*",
]
ignore_missing_imports = true
